dev/tax/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tax
  namespace: yas-dev
  labels:
    app: tax
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tax
  template:
    metadata:
      labels:
        app: tax
    spec:
      containers:
      - name: tax
        image: ghcr.io/nashtech-garage/yas-tax:latest
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: 256Mi
            cpu: 100m
          limits:
            memory: 512Mi
            cpu: 500m
