dev/tax/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tax
  namespace: yas-dev
  labels:
    app: tax
spec:
  type: ClusterIP
  selector:
    app: tax
  ports:
  - port: 80
    targetPort: 80
